--- a/notes.html
+++ b/notes.html
@@ -6,7 +6,7 @@
     <title>Physics Notes - Cristian Villalobos</title>
     <!-- Meta Description for SEO -->
     <meta name="description"
-        content="Physics notes by Cristian Villalobos. Explore detailed notes on Fluid Dynamics, Thermodynamics, and more.">
+        content="Physics notes. Explore detailed notes on Fluid Dynamics, Thermodynamics, and more.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
