--- a/publications.html
+++ b/publications.html
@@ -16,24 +16,30 @@
 
 <body>
     <!-- Header Section -->
-    <header class="bg-primary text-white py-3">
+    <header class="bg-custom-primary text-white py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <h1 class="h3 mb-0">Cristian Villalobos-Conchaa</h1>
+                <h1 class="h3 mb-0">Cristian Villalobos-Concha</h1>
                 <nav>
                     <ul class="nav">
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="curriculum.html">Curriculum</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="publications.html">Publications</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link text-white" href="notes.html">Notes</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="curriculum.html">Curriculum</a></li>
+                        <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                        <li class="nav-item"><a class="nav-link" href="notes.html">Notes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </nav>
+                <!-- Removed Dark Mode Toggle Button for Consistency -->
+                <!-- If you wish to include it, ensure it's styled consistently across all pages -->
+                <!--
                 <button id="dark-mode-toggle" class="btn btn-outline-light" aria-label="Toggle Dark Mode">
                     <i class="fas fa-moon"></i>
                 </button>
+                -->
             </div>
+            <!-- Detailed Contact Information (Optional) -->
+            <!-- You can include contact info here if desired -->
         </div>
     </header>
 
@@ -44,7 +50,7 @@
                 <h2 class="text-center mb-4">Publications</h2>
                 <div class="list-group">
                     <!-- Publication 1 -->
-                    <div class="list-group-item">
+                    <div class="list-group-item mb-3">
                         <h3 class="mb-1">Recovering the Activity Parameters of an Active Fluid Confined in a Sphere</h3>
                         <p class="mb-1"><strong>Journal:</strong> Physical Review E (2023)</p>
                         <p class="mb-1"><strong>Authors:</strong> Cristian Villalobos, Co-author Name</p>
@@ -58,7 +64,7 @@
                     </div>
 
                     <!-- Publication 2 -->
-                    <div class="list-group-item">
+                    <div class="list-group-item mb-3">
                         <h3 class="mb-1">Geometrical Description of Impact Cratering Under Microgravity Conditions</h3>
                         <p class="mb-1"><strong>Journal:</strong> Granular Matter (2022)</p>
                         <p class="mb-1"><strong>Authors:</strong> Cristian Villalobos, Co-author Name</p>
@@ -70,23 +76,62 @@
                         <a href="Geometrical-description-of-impact-cratering-under-microgravity-conditions.pdf"
                             class="btn btn-primary" target="_blank">Download PDF</a>
                     </div>
+
+                    <!-- Add more publications as needed following the same structure -->
                 </div>
             </div>
         </section>
     </main>
 
     <!-- Footer Section -->
-    <footer class="bg-secondary text-white text-center py-3">
+    <footer class="bg-custom-primary text-white text-center py-3">
         <div class="container">
-            <p>&copy; <span id="current-year"></span> Cristian Villalobos-Conchaa</p>
+            <p>&copy; <span id="current-year"></span> Cristian Villalobos-Concha</p>
+            <!-- Optional: Additional footer links can be added here -->
+            <!--
+            <nav>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html">Privacy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="security.html">Security</a></li>
+                    <li class="nav-item"><a class="nav-link" href="docs.html">Docs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            -->
         </div>
     </footer>
 
+    <!-- Back to Top Button -->
+    <button id="back-to-top" aria-label="Back to Top" class="btn btn-primary btn-lg rounded-circle" title="Back to Top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
+
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom Scripts -->
+    <script src="scripts.js"></script>
     <script>
         // Script to update the current year in the footer
         document.getElementById("current-year").textContent = new Date().getFullYear();
+
+        // Back to Top Button Functionality
+        const backToTopButton = document.getElementById("back-to-top");
+
+        window.addEventListener("scroll", () => {
+            if (window.pageYOffset > 300) {
+                backToTopButton.style.display = "block";
+            } else {
+                backToTopButton.style.display = "none";
+            }
+        });
+
+        backToTopButton.addEventListener("click", () => {
+            window.scrollTo({
+                top: 0,
+                behavior: "smooth"
+            });
+        });
     </script>
 </body>
 
